# file-store-server

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  rust-toolchain.toml
.github/workflows/: release.yml
src/: main.rs
src/controller/: client_controller.rs  mod.rs
src/file_store_manager/: mod.rs  non_hasher.rs  user_store.rs
src/service/: config.rs  io.rs  logger.rs  mod.rs  service_opt.rs  windows_service.rs
