[package]
name = "file-store-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
service-manager = "0.2.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
flexi_logger = { version = "0.25", features = ["async"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
netxserver = { version = "1.8", features = ["use_rustls"] }
async-trait = "0.1"
tokio-rustls = "0.23"
rustls-pemfile = "1"
aqueue = "1.2"
blake3 = "1.3"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"