[package]
name = "fss"
version = "0.1.6"
edition = "2021"
authors = ["luyi <luyikk@126.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/file-store-server"
description = "file store service."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["backtrace"]
backtrace = ["anyhow/backtrace"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
service-manager = "0.2.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
flexi_logger = { version = "0.25", features = ["async"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
netxserver = { version = "1.9", features = ["use_rustls", "dserde"] }
async-trait = "0.1"
tokio-rustls = "0.24"
rustls-pemfile = "1"
aqueue = "1.2"
path-absolutize = "3"
blake3 = "1.3"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"