[package]
name = "fss"
version = "0.3.0"
edition = "2021"
authors = ["luyi <luyikk@126.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/file-store-server"
description = "file store service."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
backtrace = ["anyhow/backtrace"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
service-manager = "0.2.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
flexi_logger = { version = "0.27", features = ["async"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
netxserver = { version = "2", features = ["use_rustls", "dserde"] }
tokio-rustls = "0.24"
rustls-pemfile = "1"
aqueue = "1.2"
path-absolutize = "3"
blake3 = "1.3"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.18"


[target.'cfg(windows)'.dependencies]
windows-service = "0.6"